# FitAI

./: README.md
Backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
Backend/app/: __init__.py  main.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/endpoints/: auth.py  exercises.py  health.py  nutrition.py  progress.py  social.py  users.py  workouts.py
Backend/app/core/: config.py  database.py  deps.py  exceptions.py  ids.py  logging_config.py  security.py
Backend/app/models/: __init__.py  nutrition.py  password_reset.py  progress.py  reference.py  social.py  user.py  workout.py
Backend/app/schemas/: __init__.py  common.py  fields.py  nutrition.py  progress.py  social.py  user.py  workout.py
Backend/app/seed/: reference_data.py  runner.py
Backend/app/services/: password_reset_service.py  user_service.py  workout_generator.py
Backend/tests/: conftest.py  test_api.py
Frontend/: .env.example  app.json  package-lock.json  package.json
Frontend/app/: _layout.tsx  index.tsx
Frontend/src/components/modals/: AppModals.tsx  ChallengeDetailModal.tsx  CommentsModal.tsx  ExerciseDetailModal.tsx  WorkoutBuilderModal.tsx  (+1 more)
Frontend/src/config/: env.ts  index.ts
Frontend/src/context/: AppContext.tsx  ThemeContext.tsx
Frontend/src/hooks/: use-themed-styles.ts
Frontend/src/navigation/: AppRoot.tsx
Frontend/src/screens/: index.ts
Frontend/src/store/: index.ts
Frontend/src/types/: env.d.ts  index.ts  models.ts  navigation.ts
Frontend/src/utils/: alert.ts
(+59 files in other folders)
