[project]
name = "fitai-backend"
version = "1.0.0"
description = "FitAI FastAPI + MongoDB backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "motor==3.6.0",
    "beanie==1.27.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pyright==1.1.390",
]

[project.scripts]
fitai-api = "run:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
